add_subdirectory(IndexTreeToSCF)
add_subdirectory(TensorAlgebraToIndexTree)
add_subdirectory(TensorAlgebraToSCF)
add_subdirectory(ParallelLoopsToGpu)
add_subdirectory(GpuToOCLSPIRV)
add_subdirectory(GpuHostToMCLRT)
if(ENABLE_GPU_TARGET)
add_subdirectory(GpuToTriton)
add_subdirectory(TritonToCuda)
endif()