add_subdirectory(IndexTreeToSCF)
add_subdirectory(TensorAlgebraToIndexTree)
add_subdirectory(TensorAlgebraToSCF)
if(ENABLE_FPGA_TARGET OR ENABLE_GPU_TARGET)
add_subdirectory(ParallelLoopsToGpu)
endif()
if(ENABLE_FPGA_TARGET)
add_subdirectory(GpuToOCLSPIRV)
add_subdirectory(GpuHostToMCLRT)
endif()
if(ENABLE_GPU_TARGET)
add_subdirectory(GpuToTriton)
add_subdirectory(TritonToCuda)
endif()